compiler/testData/diagnostics/tests/regressions/kt3810.kt
interface A {
    var foo: String
}

class B(override <!VAR_OVERRIDDEN_BY_VAL!>val<!> foo: String) : A
